changed the svg file with a modified version to solve the huge gap between sections

--- a/src/styles/dividers.css
+++ b/src/styles/dividers.css
@@ -1,7 +1,7 @@
 /* styles for the SVG section dividers */
 
 .spacer{
-    aspect-ratio: 960/300;
+    aspect-ratio: 960/106 ;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
